--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
              <p class="i_believe">I'm passionate at creating dynamic digital products by extensively researching client/market needs and using optimized wireframes, strategical call-to-action's and industry best practices that put user experience and design interface at the forefront.  <br><br>Whether at work or not,<br>I take my pour over coffee pretty&nbsp;seriously ☕<br><br>When not at work, I enjoy spending quality time with my family, friends and partner.  I workout at the gym frequently and am always down for a good Netflix binge.</p> -->
            <!-- </div>  -->
 				<center>
-    				<div id="labtopresumewidth">
+    				<div id="labtopresumewidth" style="overflow: visible;">
 						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 14pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do</p>
 						<div style="margin-left:auto; margin-right: auto; position: relative;"><a href="EDWIN AU.pdf" target="_blank">
               <img id="resume_movement" class="resume_pdf" src="EDWIN AU.jpg" alt="resume" title="Download PDF" ></a>
