--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
            <!-- </div>  -->
 				<center>
     				<div id="labtopresumewidth" style="overflow: visible;">
-						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 17pt; font-weight: bold; letter-spacing: .1em; line-height: 1.75; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do
+						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 17pt; font-weight: bold; line-height: 1.75; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do&nbsp;
               <i class="fa fa-barcode" aria-hidden="true" style="margin-top: 5%;"></i>
             <br><span style="font-size:9pt">Click on resume to download PDF.</span></p>
 						<div style="margin-left:auto; margin-right: auto; position: relative;"><a href="EDWIN AU.pdf" target="_blank">
