Adding click zoom to portfolio first tile

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,14 @@
       <div class="popup" onclick="myFunction()">
         <span class="popuptext" id="myPopup">
           <span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&lsaquo;</span><span class="portfolionexttwo popuptwo" onclick="myFunctiontwo()">&rsaquo;</span><span class="close-btn-xy">&times;</span>
-          <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images_pop">
+          <div class="click-zoom">
+            <label>
+              <input type="checkbox">
+                <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images_pop">
+            </label>
+          </div>
           <p class="titleforpopup">2020 | Visual and experience design for BLG BEYOND Legal Services</p>
+          <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
           <p class="textforpopup">My clients required a dynamic motion banner that animates and demonstrates innovation for the newly launched suite of alternative legal services.  The result was a dynamic banner using CSS & HTML that is impactful while maintaining a fast load&nbsp;speed.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
           </p>
@@ -85,6 +91,7 @@
       <span class="portfolionexttwo popup" onclick="myFunction()">&lsaquo;</span><span class="portfolionexttwo popupthree" onclick="myFunctionthree()">&rsaquo;</span><span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop">
       <p class="titleforpopup">2022 | Visual design for BLG Merchandise Store</p>
+      <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
       <p class="textforpopup">Visual design for BLG Client and Staff Portal - BLG Merchandise store<br>
         <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blacksheepshop.net/blg/" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Merchandise Store</a></p></span>
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
@@ -96,8 +103,9 @@
     <span class="popuptextthree" id="myPopupthree">
       <span class="portfolionexttwo popuptwo" onclick="myFunctiontwo()">&lsaquo;</span><span class="portfolionexttwo popup14" onclick="myFunction14()">&rsaquo;</span><span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop">
-        <p class="titleforpopup">2021 | product design for BLG Google Campaign</p>
-        <p class="textforpopup">Visual design for Client Portal - BLG Merchandise store<br><br></p>
+        <p class="titleforpopup">2021 | Landing page design for Google Campaign</p>
+        <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+        <p class="textforpopup">We curated a landing page for BLG that ties into the google ads campaign featuring our top six practice groups that drew a broad audience and attracting over 3% click through rate.<br><br></p>
       </span>
         <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
       </div>
@@ -113,7 +121,15 @@
         <span class="popuptext14" id="myPopup14">
           <span class="portfolionexttwo popupthree" onclick="myFunctionthree()">&lsaquo;</span><span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&rsaquo;</span><span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
-            <p class="textforpopup">2023 | BLG - Visual social to webpage here</p>
+            <p class="titleforpopup">2023 | BLG - Visual design for BLG Technology M&A Trends</p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+            <p class="textforpopup">Visual and animation design for BLG M&A Trends for social media post with click through leading to landing page<br>
+            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+            &nbsp;<a href="https://www.linkedin.com/feed/update/urn:li:activity:7026549962805059584?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7026549962805059584%29" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">LinkedIn BLG Technology M&A social post</a><br>
+            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+            &nbsp;<a href="https://www.blg.com/en/insights/2023/ri/technology-m-and-a-trends-what-to-expect-in-2023" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Technology M&A landing page</a>
+          </p>
+
           </span>
           <center>
         <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; transform: scale(1.9); padding-bottom: 15%; opacity: 0.8;">
