finished portfolio part 1

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
-        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1><br>
+        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1>
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
 		  <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
@@ -75,13 +75,13 @@
       </div>
 
 
-	  <div style="background: red;
+	  <!--<div style="background: red;
   background: -webkit-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Firefox 3.6 to 15 */
   background: linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* Standard syntax */
 				height: 5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >&nbsp;
-	  </div>
+	  </div>-->
     </div>
 
 <center>
