added two column variations on portfolio page

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
               <i class="fa fa-barcode" aria-hidden="true" style="margin-top: 5%;"></i>
             <br><span style="font-size:9pt">Click on resume to download PDF.</span></p>
 						<div style="margin-left:auto; margin-right: auto; position: relative;"><a href="EDWIN AU.pdf" target="_blank">
-              <img id="resume_movement" class="resume_pdf" src="EDWIN AU.jpg" alt="resume" title="Download PDF" ></a>
+              <img id="resume_movement" class="resume_pdf" src="EDWIN AU.jpg" alt="resume" title="Click to download PDF" ></a>
 						</div>
 					</div>
 				</center>
