--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,8 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 
 
+<!--Portfolio page Nav Menu-->
+
 <table class="threecoloumntables" style="margin-top: 25px;">
   <tr>
     <td class="threebythreegrid hamburger" style="position: relative; vertical-align: top; align: left; overflow: visible; z-index:10;">
@@ -62,6 +64,8 @@
 </tr>
 </table>
 
+
+<!--BLG Section 3 columns-->
 
 <table class="threecoloumntables" style="margin-top: 1%;">
   <tr>
@@ -123,99 +127,15 @@
   </tr>
 </table>
 
-<table class="threecoloumntables">
-  <tr>
 
-    <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
-      <div class="popup14" onclick="myFunction14()">
-        <span class="popuptext14" id="myPopup14">
-          <span class="portfolionexttwo popupthree" onclick="myFunctionthree()">&#5176;</span><span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
-          <div class="click-zoom">
-            <label>
-              <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
-        </label>
-      </div>
-            <p class="titleforpopup">2023 | BLG - Visual design for BLG Technology M&A Trends</p>
-            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
-            <p class="textforpopup">Visual and animation design for BLG M&A Trends for social media post with click through leading to landing page<br>
-            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
-            &nbsp;<a href="https://www.linkedin.com/feed/update/urn:li:activity:7026549962805059584?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7026549962805059584%29" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">LinkedIn BLG Technology M&A social post</a><br>
-            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
-            &nbsp;<a href="https://www.blg.com/en/insights/2023/ri/technology-m-and-a-trends-what-to-expect-in-2023" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Technology M&A landing page</a>
-          </p>
 
-          </span>
-          <center>
-        <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; transform: scale(1.9); padding-bottom: 15%; opacity: 0.8;">
-        </center>
-      </div>
-    </td>
+<!--BLG Section 2 one at 66% columns-->
 
-<td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
-  <div class="popupfive" onclick="myFunctionfive()">
-    <span class="popuptextfive" id="myPopupfive">
-      <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5176;</span><span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
-      <div class="click-zoom">
-        <label>
-          <input type="checkbox">
-      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
-    </label>
-  </div>
-        <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
-        <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
-
-        <p class="textforpopup"><span style="font-style: italic;">A Conversation with Margaret Atwood</span>&mdash; Blakes event eVite design</p>
-
-      </span>
-    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2); opacity: 0.5;">
-  </div>
-</td>
-
-<td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
-  <div class="popupseven" onclick="myFunctionseven()">
-    <span class="popuptextseven" id="myPopupseven">
-      <span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5176;</span><span class="portfolionexttwo popup8" onclick="myFunction8()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
-
-      <div class="click-zoom">
-        <label>
-          <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
-        </label>
-      </div>
-        <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
-        <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
-        <p class="textforpopup"><span style="font-style: italic;">Blakes Madness XII</span>&mdash; Blakes event eVite design</p>
-      </span>
-    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
-  </div>
-</td>
-
-  </tr>
-</table>
 
 <table class="threecoloumntables">
   <tr>
 
-
-<td class="threebythreegrid" style="background: #1b0000;  border: 5px solid #ffffff;">
-  <div class="popup8" onclick="myFunction8()">
-    <span class="popuptext8" id="myPopup8">
-      <span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5176;</span><span class="portfolionexttwo popup9" onclick="myFunction9()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
-      <div class="click-zoom">
-        <label>
-          <input type="checkbox">
-      <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
-    </label>
-  </div>
-        <p class="titleforpopup">2016 - 2017 | Design Manager for Thinkway Toys</p>
-        <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
-        <p class="textforpopup">Consumer products, packaging &amp; product manual design &mdash; <span style="font-style: italic;">Star Wars Rogue 1</span></p>
-      </span>
-    <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.6;">
-  </div>
-</td>
-<td class="threebythreegrid" style="background: #FFB6C1;  border: 5px solid #ffffff;">
+<td class="threebythreegrid" style="background: #ffcba4;  border: 5px solid #ffffff; width: calc(100% / 3 * 2);">
   <div class="popup9" onclick="myFunction9()">
     <span class="popuptext9" id="myPopup9">
       <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5176;</span><span class="portfolionexttwo popup15" onclick="myFunction15()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
@@ -233,7 +153,7 @@
 
           </p>
       </span>
-      <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
+      <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8; background-size: cover;">
     </div>
     </td>
 
@@ -254,32 +174,35 @@
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
             &nbsp;<a href="https://www.linkedin.com/posts/blglaw_legalinnovation-freelancelawyer-legalcareers-activity-6953355151785037824-d0F2?utm_source=share&utm_medium=member_desktop" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Beyond animated LinkedIn post</a></p>
           </span>
-          <img alt="Carousel Bootstrap Third" src="images/BLG-Beyond-Rocket-Gif.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.9; transform: scale(1.9); padding-bottom: 15%; padding-left: 5%;">
+          <img alt="Carousel Bootstrap Third" src="images/BLG-Beyond-Rocket-Gif.gif" class="portfolio_images" text-align="center" style="left: -50%; display: block; margin-left: auto; margin-right: auto; opacity: 0.9; transform: scale(3.95); left: -50%; position: relative; padding-bottom: 32%; padding-left: 5%;">
         </div>
       </td>
   </tr>
 </table>
 
+<!--BLG Section 3 columns -->
+
 <table class="threecoloumntables">
   <tr>
-    <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
-      <div class="popup10" onclick="myFunction10()">
-        <span class="popuptext10" id="myPopup10">
-        <span class="portfolionexttwo popup15" onclick="myFunction15()">&#5176;</span><span class="portfolionexttwo popup11" onclick="myFunction11()">&#5171;</span>
-        <span class="close-btn-xy">&#10540;</span>
-        <div class="click-zoom">
-          <label>
-            <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
+
+    <td class="threebythreegrid" style="background: #65fe08;  border: 5px solid #ffffff;">
+      <div class="popup8" onclick="myFunction8()">
+        <span class="popuptext8" id="myPopup8">
+          <span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5176;</span><span class="portfolionexttwo popup9" onclick="myFunction9()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
+          <div class="click-zoom">
+            <label>
+              <input type="checkbox">
+          <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
         </label>
       </div>
-            <p class="textforpopup">2013 - 2016 | Associate, Product Approval &mdash; Disney Consumer Products</p>
+            <p class="titleforpopup">2016 - 2017 | Design Manager for Thinkway Toys</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
-            <p class="textforpopup">Provided creative guidance in the design and development of Disney consumer softlines and hardlines products sold across Walmart Canada, Target Canada, Canadian Tire, Toy R' Us Canada, Dollarama, Uniqlo; Working with the team in leading 50+ licensees simultaneously on 300+ products seasonally.</p>
+            <p class="textforpopup">Consumer products, packaging &amp; product manual design &mdash; <span style="font-style: italic;">Star Wars Rogue 1</span></p>
           </span>
-          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: .9;">
+        <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.6;">
       </div>
-  </td>
+    </td>
+
 
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
   <div class="popup11" onclick="myFunction11()">
@@ -319,6 +242,62 @@
   </tr>
 </table>
 
+<!--BLG Section 2 columns 50/50-->
+
+
+<table class="threecoloumntables">
+  <tr>
+
+    <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
+      <div class="popup14" onclick="myFunction14()">
+        <span class="popuptext14" id="myPopup14">
+          <span class="portfolionexttwo popupthree" onclick="myFunctionthree()">&#5176;</span><span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
+          <div class="click-zoom">
+            <label>
+              <input type="checkbox">
+          <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
+        </label>
+      </div>
+            <p class="titleforpopup">2023 | BLG - Visual design for BLG Technology M&A Trends</p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+            <p class="textforpopup">Visual and animation design for BLG M&A Trends for social media post with click through leading to landing page<br>
+            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+            &nbsp;<a href="https://www.linkedin.com/feed/update/urn:li:activity:7026549962805059584?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7026549962805059584%29" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">LinkedIn BLG Technology M&A social post</a><br>
+            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+            &nbsp;<a href="https://www.blg.com/en/insights/2023/ri/technology-m-and-a-trends-what-to-expect-in-2023" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Technology M&A landing page</a></p>
+          </span>
+          <center>
+        <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; transform: scale(1.85); padding-bottom: 10%; opacity: 1;">
+        </center>
+      </div>
+    </td>
+
+<td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
+  <div class="popupfive" onclick="myFunctionfive()">
+    <span class="popuptextfive" id="myPopupfive">
+      <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5176;</span><span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
+      <div class="click-zoom">
+        <label>
+          <input type="checkbox">
+      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
+    </label>
+  </div>
+        <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
+        <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+
+        <p class="textforpopup"><span style="font-style: italic;">A Conversation with Margaret Atwood</span>&mdash; Blakes event eVite design</p>
+
+      </span>
+    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(1.6); opacity: 0.7; padding-top:15%;">
+  </div>
+</td>
+  </tr>
+</table>
+
+
+<!--BLG Section 3 columns-->
+
+
 <table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background: #666666;  border: 5px solid #ffffff;">
@@ -339,7 +318,7 @@
       </div>
   </td>
 
-  <td class="threebythreegrid" style="background:#77dd77;  border: 5px solid #ffffff;">
+  <td class="threebythreegrid" style="background:purple;  border: 5px solid #ffffff;">
     <div class="popupsix" onclick="myFunctionsix()">
       <span class="popuptextsix" id="myPopupsix">
         <span class="portfolionexttwo popup13" onclick="myFunction13()">&#5176;</span><span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
@@ -353,7 +332,7 @@
             <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
             <p class="textforpopup"><span style="font-style: italic;">A night with Shania Twain</span>&mdash; Blakes event eVite design</p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
+        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.75;">
       </div>
     </td>
 
@@ -377,6 +356,55 @@
         <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: 0.3;">
       </div>
     </td>
+
+  </tr>
+</table>
+
+<!--BLG Section 3 columns-->
+
+
+<table class="threecoloumntables">
+  <tr>
+    <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
+      <div class="popupseven" onclick="myFunctionseven()">
+        <span class="popuptextseven" id="myPopupseven">
+          <span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5176;</span><span class="portfolionexttwo popup8" onclick="myFunction8()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
+
+          <div class="click-zoom">
+            <label>
+              <input type="checkbox">
+              <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
+            </label>
+          </div>
+            <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+            <p class="textforpopup"><span style="font-style: italic;">Blakes Madness XII</span>&mdash; Blakes event eVite design</p>
+          </span>
+        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
+      </div>
+    </td>
+
+
+    <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
+      <div class="popup10" onclick="myFunction10()">
+        <span class="popuptext10" id="myPopup10">
+        <span class="portfolionexttwo popup15" onclick="myFunction15()">&#5176;</span><span class="portfolionexttwo popup11" onclick="myFunction11()">&#5171;</span>
+        <span class="close-btn-xy">&#10540;</span>
+        <div class="click-zoom">
+          <label>
+            <input type="checkbox">
+          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
+        </label>
+      </div>
+            <p class="textforpopup">2013 - 2016 | Associate, Product Approval &mdash; Disney Consumer Products</p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+            <p class="textforpopup">Provided creative guidance in the design and development of Disney consumer softlines and hardlines products sold across Walmart Canada, Target Canada, Canadian Tire, Toy R' Us Canada, Dollarama, Uniqlo; Working with the team in leading 50+ licensees simultaneously on 300+ products seasonally.</p>
+          </span>
+          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: .9;">
+      </div>
+    </td>
+
+
 
   </tr>
 </table>
