Fixed Portfolio button on phone to function

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
 <center>
-  <div style="transform: scale(2.5); margin-top: 10%; width:30%;">
+  <div class="trapezoiddiv" style="transform: scale(2.5); margin-top: 10%; width:30%;">
     <div class="trapezoid"></div>
   </div>
 
@@ -183,7 +183,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 17pt; font-weight: bold; line-height: 1.75; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do&nbsp;
               <i class="fa fa-barcode" aria-hidden="true" style="margin-top: 5%;"></i>
             <br><span style="font-size:9pt">Click on resume to download PDF.</span></p>
-						<div style="margin-left:auto; margin-right: auto; position: relative;"><a href="EDWIN AU.pdf" target="_blank">
+						<div class="forcvportwork" style="margin-left:auto; margin-right: auto; position: relative;"><a href="EDWIN AU.pdf" target="_blank">
               <img id="resume_movement" class="resume_pdf" src="EDWIN AU.jpg" alt="resume" title="Click to download PDF" ></a>
 						</div>
 					</div>
