portfolio and index updates, and need to add Trapezoid on large monitor

--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
     </a>
   </p>
 
-    <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);"  id="backtotop">
+    <div class="container_one intro" id="backtotop">
 
 
       <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
