--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,8 @@
         <a href="https://edwinau.github.io/edwin-landing/index.html" style="color: black; text-decoration: none;" target="_blank">
           Welcome to my portfolio page
         </a>
-      </span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
-      <span style="text-decoration: underline; color: blue;">inquire</span></a> within</p>
+      </span><br>For more on how I may help, please <a href="mailto:edwinfcau@gmail.com">
+      <span style="text-decoration: underline; color: blue;">inquire</span></a></p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
@@ -161,7 +161,7 @@
 
           </p>
       </span>
-      <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8; background-size: cover;">
+      <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.9; background-size: cover;">
     </div>
     </td>
 
@@ -189,6 +189,61 @@
   </tr>
 </table>
 
+<!--BLG Section 2 columns 50/50-->
+
+
+<table class="threecoloumntables">
+  <tr>
+
+    <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
+      <div class="popup14" onclick="myFunction14()">
+        <span class="popuptext14" id="myPopup14">
+          <span class="portfolionexttwo popup13" onclick="myFunction13()">&#5176;</span>
+          <span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5171;</span>
+          <span class="close-btn-xy">&#10540;</span>
+          <div class="click-zoom">
+            <label>
+              <input type="checkbox">
+          <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
+        </label>
+      </div>
+            <p class="titleforpopup">2023 | BLG - Visual design for BLG Technology M&A Trends</p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+            <p class="textforpopup">Visual and animation design for BLG M&A Trends for social media post with click through leading to landing page<br>
+            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+            &nbsp;<a href="https://www.linkedin.com/feed/update/urn:li:activity:7026549962805059584?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7026549962805059584%29" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">LinkedIn BLG Technology M&A social post</a><br>
+            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+            &nbsp;<a href="https://www.blg.com/en/insights/2023/ri/technology-m-and-a-trends-what-to-expect-in-2023" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Technology M&A landing page</a></p>
+          </span>
+          <center>
+        <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; transform: scale(1.85); padding-bottom: 10%; opacity: 1;">
+        </center>
+      </div>
+    </td>
+
+<td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
+  <div class="popupfive" onclick="myFunctionfive()">
+    <span class="popuptextfive" id="myPopupfive">
+      <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5176;</span>
+      <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5171;</span>
+      <span class="close-btn-xy">&#10540;</span>
+      <div class="click-zoom">
+        <label>
+          <input type="checkbox">
+      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
+    </label>
+  </div>
+        <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
+        <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+
+        <p class="textforpopup"><span style="font-style: italic;">A Conversation with Margaret Atwood</span>&mdash; Blakes event eVite design</p>
+
+      </span>
+    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(1.6); opacity: 0.7; padding-top:15%;">
+  </div>
+</td>
+  </tr>
+</table>
 
 <!--BLG Section 3 columns-->
 
@@ -261,59 +316,53 @@
   </tr>
 </table>
 
-<!--BLG Section 2 columns 50/50-->
 
+<!--BLG Section 3 columns-->
 
 <table class="threecoloumntables">
   <tr>
-
-    <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
-      <div class="popup14" onclick="myFunction14()">
-        <span class="popuptext14" id="myPopup14">
-          <span class="portfolionexttwo popup13" onclick="myFunction13()">&#5176;</span>
-          <span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5171;</span>
+    <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
+      <div class="popupseven" onclick="myFunctionseven()">
+        <span class="popuptextseven" id="myPopupseven">
+          <span class="portfolionexttwo popup12" onclick="myFunction12()">&#5176;</span>
+          <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5171;</span>
           <span class="close-btn-xy">&#10540;</span>
+
           <div class="click-zoom">
             <label>
               <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
-        </label>
-      </div>
-            <p class="titleforpopup">2023 | BLG - Visual design for BLG Technology M&A Trends</p>
+              <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
+            </label>
+          </div>
+            <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
-            <p class="textforpopup">Visual and animation design for BLG M&A Trends for social media post with click through leading to landing page<br>
-            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
-            &nbsp;<a href="https://www.linkedin.com/feed/update/urn:li:activity:7026549962805059584?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7026549962805059584%29" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">LinkedIn BLG Technology M&A social post</a><br>
-            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
-            &nbsp;<a href="https://www.blg.com/en/insights/2023/ri/technology-m-and-a-trends-what-to-expect-in-2023" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Technology M&A landing page</a></p>
+            <p class="textforpopup"><span style="font-style: italic;">Blakes Madness XII</span>&mdash; Blakes event eVite design</p>
           </span>
-          <center>
-        <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; transform: scale(1.85); padding-bottom: 10%; opacity: 1;">
-        </center>
+        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
       </div>
     </td>
 
-<td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
-  <div class="popupfive" onclick="myFunctionfive()">
-    <span class="popuptextfive" id="myPopupfive">
-      <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5176;</span>
-      <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5171;</span>
-      <span class="close-btn-xy">&#10540;</span>
-      <div class="click-zoom">
-        <label>
-          <input type="checkbox">
-      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
-    </label>
-  </div>
-        <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
-        <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
 
-        <p class="textforpopup"><span style="font-style: italic;">A Conversation with Margaret Atwood</span>&mdash; Blakes event eVite design</p>
+    <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
+      <div class="popup10" onclick="myFunction10()">
+        <span class="popuptext10" id="myPopup10">
+        <span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5176;</span>
+        <span class="portfolionexttwo popupup" onclick="myFunction()">&#5171;</span>
+        <span class="close-btn-xy">&#10540;</span>
+        <div class="click-zoom">
+          <label>
+            <input type="checkbox">
+          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
+        </label>
+      </div>
+            <p class="textforpopup">2013 - 2016 | Associate, Product Approval &mdash; Disney Consumer Products</p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
+            <p class="textforpopup">Provided creative guidance in the design and development of Disney consumer softlines and hardlines products sold across Walmart Canada, Target Canada, Canadian Tire, Toy R' Us Canada, Dollarama, Uniqlo; Working with the team in leading 50+ licensees simultaneously on 300+ products seasonally.</p>
+          </span>
+          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: .9;">
+      </div>
+    </td>
 
-      </span>
-    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(1.6); opacity: 0.7; padding-top:15%;">
-  </div>
-</td>
   </tr>
 </table>
 
@@ -385,57 +434,7 @@
 </table>
 
 
-<!--BLG Section 3 columns-->
 
-
-<table class="threecoloumntables">
-  <tr>
-    <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
-      <div class="popupseven" onclick="myFunctionseven()">
-        <span class="popuptextseven" id="myPopupseven">
-          <span class="portfolionexttwo popup12" onclick="myFunction12()">&#5176;</span>
-          <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5171;</span>
-          <span class="close-btn-xy">&#10540;</span>
-
-          <div class="click-zoom">
-            <label>
-              <input type="checkbox">
-              <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
-            </label>
-          </div>
-            <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
-            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
-            <p class="textforpopup"><span style="font-style: italic;">Blakes Madness XII</span>&mdash; Blakes event eVite design</p>
-          </span>
-        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
-      </div>
-    </td>
-
-
-    <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
-      <div class="popup10" onclick="myFunction10()">
-        <span class="popuptext10" id="myPopup10">
-        <span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5176;</span>
-        <span class="portfolionexttwo popupup" onclick="myFunction()">&#5171;</span>
-        <span class="close-btn-xy">&#10540;</span>
-        <div class="click-zoom">
-          <label>
-            <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
-        </label>
-      </div>
-            <p class="textforpopup">2013 - 2016 | Associate, Product Approval &mdash; Disney Consumer Products</p>
-            <hr style="height:1px; color:#ffffff; margin: auto; width: 525px; opacity: 1;">
-            <p class="textforpopup">Provided creative guidance in the design and development of Disney consumer softlines and hardlines products sold across Walmart Canada, Target Canada, Canadian Tire, Toy R' Us Canada, Dollarama, Uniqlo; Working with the team in leading 50+ licensees simultaneously on 300+ products seasonally.</p>
-          </span>
-          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: .9;">
-      </div>
-    </td>
-
-
-
-  </tr>
-</table>
 
 
 <!--
