--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
     </div>
 
 <center>
-  <div class="trapezoiddiv" style="transform: scale(2.5); margin-top: 10%; width:30%;">
-    <div class="trapezoid"></div>
+  <div class="trapezoiddiv" style="transform: scale(2.5); width:30%;">
+    <div class="trapezoid">
+    </div>
   </div>
-
 </center>
+
 
 <!-- <div style="background-image: url(images/wood.png); width: 100vw; height: 50vh", class="img_relative carouselgradient"> -->
 
@@ -169,24 +170,20 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 	<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, white 5px, transparent 5px) 0 5px;">
 <!--  <img src="images/plant-2.png" class="img_absolute img_plant" alt="plant"> -->
 <!--  <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop"> -->
-		<div class="container_nut">
-			<div class="container-fluid nut">
             <!--<div class="col-md-10"> -->
               <!--<p class="hello">Who I am <br> &amp; what I do...</p><hr style="width: 85%;" class="ipad displaynone">
              <p class="i_believe">I'm passionate at creating dynamic digital products by extensively researching client/market needs and using optimized wireframes, strategical call-to-action's and industry best practices that put user experience and design interface at the forefront.  <br><br>Whether at work or not,<br>I take my pour over coffee pretty&nbsp;seriously ☕<br><br>When not at work, I enjoy spending quality time with my family, friends and partner.  I workout at the gym frequently and am always down for a good Netflix binge.</p> -->
            <!-- </div>  -->
 				<center>
     				<div id="labtopresumewidth" style="overflow: visible;">
-						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 17pt; font-weight: bold; line-height: 1.75; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do&nbsp;
-              <i class="fa fa-barcode" aria-hidden="true" style="margin-top: 5%;"></i>
-            <br><span style="font-size:9pt">Click on resume to download PDF.</span></p>
+						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 17pt; font-weight: bold; line-height: 1.25; opacity: 1; margin: auto; top: -7vh; margin-top: 2%; margin-bottom:1%; text-align: center;">Who I am and what I do&nbsp;
+              <i class="fa fa-barcode" aria-hidden="true" style="margin-top: 3%;"></i>
+            <br><span style="font-size:10pt">Click on resume to download PDF.</span></p>
 						<div class="forcvportwork" style="margin-left:auto; margin-right: auto; position: relative;"><a href="EDWIN AU.pdf" target="_blank">
               <img id="resume_movement" class="resume_pdf" src="EDWIN AU.jpg" alt="resume" title="Click to download PDF" ></a>
 						</div>
 					</div>
 				</center>
-        	</div>
-      	</div>
     </div>
 
  <!-- contact page -->
@@ -198,14 +195,10 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
     <div class="container_two contact">
       <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email">edwinfcau@gmail.com</a></h4>
-		  <br class="imac displaynone"><br class="imac displaynone">
-		  <br class="imac displaynone"><br class="imac displaynone">
+
         <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
-		  <br class="imac displaynone"><br class="imac displaynone">
        <!-- <h4 class="facebook" title="Click to view Facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
-		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791" id="contactme"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
-		  <br class="imac displaynone"><br class="imac displaynone">
       </div>
     </div>
 </div>
