Fixed portolio rotate on phone

--- a/portfolio.html
+++ b/portfolio.html
@@ -134,7 +134,7 @@
       </div>
         <p class="titleforpopup">2021 - 2022 | Landing page for Google ad campaign</p>
         <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-        <p class="textforpopup">We curated a landing page for BLG that ties into the google ads campaign featuring our top six practice groups that drew a broad audience and attracting over 3% click through rate. The landing page has been taken down at the end of Google ad campaign back in Dec 2022.<br><br></p>
+        <p class="textforpopup">We curated a landing page for BLG that ties into the google ads campaign featuring our top six practice groups that drew a broad audience and attracting over 3% click through rate. This landing page has been deactivated at the end of the Google ad campaign in September 2022.<br><br></p>
       </span>
         <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
       </div>
