Adding new transition using opacity and display

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 
 <table class="threecoloumntables" style="margin-top: 1%;">
   <tr>
-    <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
+    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
       <div class="popup" onclick="myFunction()" style="position:relative;">
         <span class="popuptext" id="myPopup">
           <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5176;</span>
@@ -78,8 +78,8 @@
           <div class="click-zoom">
             <label>
               <input type="checkbox">
-                <img alt="Edwin Au Portfolio Beyond UX UI" src="images/beyond.jpg" class="portfolio_images_pop blgbeyondone">
-                <img alt="Edwin Au Portfolio Beyond UX UI" src="images/beyond-flat.jpg" class="portfolio_images_pop blgbeyondtwo">
+                <img alt="Edwin Au Portfolio Beyond UX UI" src="images/beyond.jpg" class="portfolio_images_pop oneflowtwo">
+                <img alt="Edwin Au Portfolio Beyond UX UI" src="images/beyond-flat.jpg" class="portfolio_images_pop twoflowtwo">
 
               <!--  <img alt="Edwin Au Portfolio Beyond UX UI Flat Ani" src="images/beyond-flat-ani.jpg" style="position: absolute; left:150px;" class="portfolio_images_pop blgbeyondthree">
                 <img alt="Edwin Au Portfolio Beyond UX UI Flat Ani" src="images/beyond-flat-ani-left.png" style="position: absolute; left:150px;" class="portfolio_images_pop blgbeyondleft">
@@ -92,8 +92,8 @@
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
           </p>
 		  </span>
-        <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images blakesdotcomone" style="display: inline; margin-left: auto; margin-right: auto; opacity: 0.95;">
-        <img alt="Carousel Bootstrap Third" src="images/beyond-flat.jpg" class="portfolio_images blakesdotcomtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 0.95;">
+        <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images oneflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 0.95;">
+        <img alt="Carousel Bootstrap Third" src="images/beyond-flat.jpg" class="portfolio_images twoflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 0.95;">
 
       </div>
   </td>
@@ -107,9 +107,8 @@
       <div class="click-zoom">
         <label>
           <input type="checkbox">
-            <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop blgbeyondone">
-            <img alt="Carousel Bootstrap Third" src="images/blgwebstore-two.jpg" class="portfolio_images_pop blgbeyondtwo" style="-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); -o-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg);">
-
+            <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop oneflowtwo">
+            <img alt="Carousel Bootstrap Third" src="images/blgwebstore-two.jpg" class="portfolio_images_pop twoflowtwo" style="-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); -o-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg);">
         </label>
       </div>
       <p class="titleforpopup">2022 | Visual design for BLG Merchandise Store</p>
@@ -131,7 +130,7 @@
       <div class="click-zoom">
         <label>
           <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop blgbeyondone">
+          <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop oneflowtwo">
           <img alt="Carousel Bootstrap Third" src="images/UXUI-Innovate-scroll.jpg" class="portfolio_images_pop innovatescroll">
 
         </label>
