--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,8 @@
           <div class="click-zoom">
             <label>
               <input type="checkbox">
-                <img alt="Edwin Au Portfolio Beyond UX UI" src="images/beyond.jpg" class="portfolio_images_pop oneflowtwo">
-                <img alt="Edwin Au Portfolio Beyond UX UI" src="images/beyond-flat.jpg" class="portfolio_images_pop twoflowtwo">
+                <img alt="Edwin Au Portfolio Beyond UX UI" src="images/beyond.jpg" class="portfolio_images_pop blgbeyondone">
+                <img alt="Edwin Au Portfolio Beyond UX UI" src="images/beyond-flat.jpg" class="portfolio_images_pop blgbeyondtwo">
 
               <!--  <img alt="Edwin Au Portfolio Beyond UX UI Flat Ani" src="images/beyond-flat-ani.jpg" style="position: absolute; left:150px;" class="portfolio_images_pop blgbeyondthree">
                 <img alt="Edwin Au Portfolio Beyond UX UI Flat Ani" src="images/beyond-flat-ani-left.png" style="position: absolute; left:150px;" class="portfolio_images_pop blgbeyondleft">
@@ -107,16 +107,16 @@
       <div class="click-zoom">
         <label>
           <input type="checkbox">
-            <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop oneflowtwo">
-            <img alt="Carousel Bootstrap Third" src="images/blgwebstore-two.jpg" class="portfolio_images_pop twoflowtwo" style="-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); -o-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg);">
+            <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop blgbeyondone">
+            <img alt="Carousel Bootstrap Third" src="images/blgwebstore-two.jpg" class="portfolio_images_pop blgbeyondtwo" style="-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); -o-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg);">
         </label>
       </div>
       <p class="titleforpopup">2022 | Visual design for BLG Merchandise Store</p>
       <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
       <p class="textforpopup">Visual design for BLG Client and Staff Portal - BLG Merchandise store.<br>
         <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blacksheepshop.net/blg/" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Merchandise Store</a></p></span>
-    <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images blakesdotcomone" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
-    <img alt="Carousel Bootstrap Third" src="images/blgwebstore-three.jpg" class="portfolio_images blakesdotcomtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
+    <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
+    <img alt="Carousel Bootstrap Third" src="images/blgwebstore-three.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
 
   </div>
 </td>
