--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,7 @@
   </div>
 </td>
 
-<td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
+<td class="threebythreegrid" style="border: 5px solid #ffffff;">
   <div class="popupthree" onclick="myFunctionthree()">
     <span class="popuptextthree" id="myPopupthree">
       <span class="portfolionexttwo popuptwo" onclick="myFunctiontwo()">&#5176;</span>
@@ -139,7 +139,9 @@
         <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
         <p class="textforpopup">We curated a landing page for BLG that ties into the Google ads campaign featuring our top six practice groups that drew a broad audience and attracting over 3% click through rate. The Google ad campaign ended in 2022 and this landing page has since been deactivated.<br><br></p>
       </span>
-        <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.75;">
+        <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
+        <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
+
       </div>
     </td>
   </tr>
