added transition display none to phone code @media 500

--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
       <div class="click-zoom">
         <label>
           <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop oneflowtwo">
+          <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop blgbeyondone">
           <img alt="Carousel Bootstrap Third" src="images/UXUI-Innovate-scroll.jpg" class="portfolio_images_pop innovatescroll">
 
         </label>
