changed display inherit to display block for animation

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-–––<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -51,7 +51,7 @@
           Welcome to my portfolio page
         </a>
       </span><br>If you require further info, feel free to <a href="mailto:edwinfcau@gmail.com">
-      <span style="text-decoration: underline; color: blue;">contact me</span></a>.</p>
+      <span style="text-decoration: underline; color: blue;">contact&nbsp;me</span></a>.</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
